[package]
name = "stable_pool_faucet_v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl-token = "0.18.0"
bytemuck = "1.7.2"
spl-math = { version = "0.1.0",features = [ "no-entrypoint" ] }