[package]
description = "Created with Anchor"
edition = "2018"
name = "stable_pool_faucet"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
devnet = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
bytemuck = "1.7.2"
spl-math = {version = "0.1.0", features = ["no-entrypoint"]}
