[package]
description = "Created with Anchor"
edition = "2018"
name = "stable_pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
arrayref = "0.3.6"
bytemuck = "1.7.2"
spl-math = { version = "0.1.0",features = [ "no-entrypoint" ] }
quarry-mine = { version = "1.10.0", features = ["cpi"] }
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
solana-program = "1.7.8"

