[package]
description = "Created with Anchor"
edition = "2018"
name = "stable-pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_pool"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
solana-program = "1.9.8"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
