[package]
description = "Created with Anchor"
edition = "2018"
name = "stable-pool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_pool"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.22.1", features = ["init-if-needed"]}
anchor-spl = "0.22.1"
solana-program = "1.9.8"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
quarry-mine = {version = "3.0.0", features = ["cpi"]}